--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,3 @@
-This is the website created by Calvin Xie.
+<h1>This is the website created by Calvin Xie.</h1>
 
 <a href = {%  url 'home' %}>return home</a>
